y.output
Terminals unused in grammar

   STRINGTYPE
   TURNEDLEFT
   TURNEDRIGHT
   NOASSOCIATIVE
   LV13
   LV12
   LV11
   LV10
   LV9
   LV8
   LV7
   LV6
   LV5
   LV4
   LV0_N
   LV0_R


Grammar

    0 $accept: startHere $end

    1 startHere: top

    2 top: scalarDeclare top
    3    | arrayDeclare top
    4    | functionDeclare top
    5    | functionDefinition top
    6    | %empty

    7 scalarDeclare: type ident identList EOL

    8 identList: COMMA ident identList
    9          | %empty

   10 ident: MULSTAR id
   11      | id

   12 id: IDENT giveScalar

   13 giveScalar: ASSIGN expr
   14           | %empty

   15 type: type1
   16     | type2
   17     | type3
   18     | type4

   19 type1: mayHaveConst mayHaveSign mayLongOrShort INTTYPE

   20 type2: mayHaveConst mayHaveSign LONGLONGTYPE
   21      | mayHaveConst mayHaveSign LONGTYPE
   22      | mayHaveConst mayHaveSign SHORTTYPE
   23      | mayHaveConst mayHaveSign CHARTYPE
   24      | mayHaveConst mayHaveSign CHAR4TYPE
   25      | mayHaveConst mayHaveSign CHAR8TYPE

   26 type3: mayHaveConst SIGNEDTYPE
   27      | mayHaveConst UNSIGNEDTYPE
   28      | mayHaveConst FLOATTYPE
   29      | mayHaveConst DOUBLETYPE
   30      | mayHaveConst VOIDTYPE

   31 type4: CONSTTYPE

   32 mayHaveConst: CONSTTYPE
   33             | %empty

   34 mayHaveSign: SIGNEDTYPE
   35            | UNSIGNEDTYPE
   36            | %empty

   37 mayLongOrShort: LONGLONGTYPE
   38               | LONGTYPE
   39               | SHORTTYPE
   40               | %empty

   41 arrayDeclare: type array arrayList EOL

   42 array: IDENT LSQUAREBRACKET expr RSQUAREBRACKET lrSquareBracketList giveArray

   43 arrayList: COMMA array arrayList
   44          | %empty

   45 lrSquareBracketList: LSQUAREBRACKET expr RSQUAREBRACKET lrSquareBracketList
   46                    | %empty

   47 giveArray: ASSIGN arrayContent
   48          | %empty

   49 arrayContent: LBRACE item itemList RBRACE
   50             | %empty

   51 itemList: COMMA item itemList
   52         | %empty

   53 item: expr
   54     | arrayContent

   55 expr: identOrArray
   56     | INT
   57     | DOUBLE
   58     | MYCHAR
   59     | MYSTRING
   60     | MYNULL
   61     | LPARENTHESIS expr RPARENTHESIS
   62     | expr ADDONE
   63     | expr MINUSONE
   64     | expr LPARENTHESIS contiExpr RPARENTHESIS
   65     | BITWISEAND expr
   66     | MULSTAR expr
   67     | TILDA expr
   68     | EXCLAMATION expr
   69     | ADD expr
   70     | MINUS expr
   71     | ADDONE expr
   72     | MINUSONE expr
   73     | LPARENTHESIS type MULSTAR RPARENTHESIS expr
   74     | LPARENTHESIS type RPARENTHESIS expr
   75     | expr MULSTAR expr
   76     | expr SLASH expr
   77     | expr MOD expr
   78     | expr ADD expr
   79     | expr MINUS expr
   80     | expr SHIFTLEFT expr
   81     | expr SHIFTRIGHT expr
   82     | expr BIG expr
   83     | expr BIGOREQ expr
   84     | expr SMALL expr
   85     | expr SMALLOREQ expr
   86     | expr EQ expr
   87     | expr NOTEQ expr
   88     | expr BITWISEAND expr
   89     | expr XOR expr
   90     | expr BITWISEOR expr
   91     | expr LOGICALAND expr
   92     | expr LOGICALOR expr
   93     | expr ASSIGN expr

   94 contiExpr: expr exprList
   95          | %empty

   96 exprList: COMMA expr exprList
   97         | %empty

   98 identOrArray: IDENT lrSquareBracketList

   99 functionDeclare: type IDENT LPARENTHESIS parameters RPARENTHESIS EOL
  100                | type MULSTAR IDENT LPARENTHESIS parameters RPARENTHESIS EOL

  101 parameters: parameter parameterList
  102           | %empty

  103 parameterList: COMMA parameter parameterList
  104              | %empty

  105 parameter: type IDENT
  106          | type MULSTAR IDENT

  107 functionDefinition: type IDENT LPARENTHESIS parameters RPARENTHESIS compoundStmt
  108                   | type MULSTAR IDENT LPARENTHESIS parameters RPARENTHESIS compoundStmt

  109 compoundStmt: LBRACE stmtOrVarDeclares RBRACE

  110 stmtOrVarDeclares: stmtOrVarDeclare stmtOrVarDeclares
  111                  | %empty

  112 stmtOrVarDeclare: stmt
  113                 | scalarDeclare
  114                 | arrayDeclare

  115 stmt: expr EOL
  116     | ifOrIfElseStmt
  117     | switchStmt
  118     | whileStmt
  119     | forStmt
  120     | returnBreakContinueStmt
  121     | compoundStmt

  122 returnBreakContinueStmt: RETURN expr EOL
  123                        | RETURN EOL
  124                        | BREAK EOL
  125                        | CONTINUE EOL

  126 forStmt: FOR LPARENTHESIS mayHaveExpr EOL mayHaveExpr EOL mayHaveExpr RPARENTHESIS stmt

  127 mayHaveExpr: expr
  128            | %empty

  129 whileStmt: WHILE LPARENTHESIS expr RPARENTHESIS stmt
  130          | DO stmt WHILE LPARENTHESIS expr RPARENTHESIS EOL

  131 switchStmt: SWITCH LPARENTHESIS expr RPARENTHESIS LBRACE switchCluses RBRACE

  132 switchCluses: switchClue switchCluses
  133             | %empty

  134 switchClue: CASE expr COLON stmts
  135           | DEFAULT COLON stmts

  136 stmts: stmt stmts
  137      | %empty

  138 ifOrIfElseStmt: IF LPARENTHESIS expr RPARENTHESIS compoundStmt mayHaveElse

  139 mayHaveElse: ELSE compoundStmt
  140            | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 56
MYCHAR (259) 58
MYSTRING (260) 59
MYNULL (261) 60
DOUBLE (262) 57
INTTYPE (263) 19
CHARTYPE (264) 23
STRINGTYPE (265)
DOUBLETYPE (266) 29
FLOATTYPE (267) 28
CONSTTYPE (268) 31 32
SIGNEDTYPE (269) 26 34
UNSIGNEDTYPE (270) 27 35
LONGLONGTYPE (271) 20 37
LONGTYPE (272) 21 38
SHORTTYPE (273) 22 39
VOIDTYPE (274) 30
CHAR4TYPE (275) 24
CHAR8TYPE (276) 25
RETURN (277) 122 123
BREAK (278) 124
CONTINUE (279) 125
FOR (280) 126
WHILE (281) 129 130
DO (282) 130
SWITCH (283) 131
CASE (284) 134
DEFAULT (285) 135
IF (286) 138
ELSE (287) 139
IDENT (288) 12 42 98 99 100 105 106 107 108
ASSIGN (289) 13 47 93
LOGICALOR (290) 92
LOGICALAND (291) 91
BITWISEOR (292) 90
XOR (293) 89
EQ (294) 86
NOTEQ (295) 87
BIGOREQ (296) 83
SMALLOREQ (297) 85
BIG (298) 82
SMALL (299) 84
SHIFTLEFT (300) 80
SHIFTRIGHT (301) 81
SLASH (302) 76
MOD (303) 77
ADD (304) 69 78
MINUS (305) 70 79
TILDA (306) 67
EXCLAMATION (307) 68
BITWISEAND (308) 65 88
MULSTAR (309) 10 66 73 75 100 106 108
ADDONE (310) 62 71
MINUSONE (311) 63 72
COMMA (312) 8 43 51 96 103
EOL (313) 7 41 99 100 115 122 123 124 125 126 130
LSQUAREBRACKET (314) 42 45
RSQUAREBRACKET (315) 42 45
LBRACE (316) 49 109 131
RBRACE (317) 49 109 131
LPARENTHESIS (318) 61 64 73 74 99 100 107 108 126 129 130 131 138
RPARENTHESIS (319) 61 64 73 74 99 100 107 108 126 129 130 131 138
COLON (320) 134 135
TURNEDLEFT (321)
TURNEDRIGHT (322)
NOASSOCIATIVE (323)
LV13 (324)
LV12 (325)
LV11 (326)
LV10 (327)
LV9 (328)
LV8 (329)
LV7 (330)
LV6 (331)
LV5 (332)
LV4 (333)
LV3 (334)
LV2 (335)
LV1 (336)
LV0_L (337)
LV0_N (338)
LV0_R (339)


Nonterminals, with rules where they appear

$accept (85)
    on left: 0
startHere (86)
    on left: 1, on right: 0
top (87)
    on left: 2 3 4 5 6, on right: 1 2 3 4 5
scalarDeclare (88)
    on left: 7, on right: 2 113
identList (89)
    on left: 8 9, on right: 7 8
ident (90)
    on left: 10 11, on right: 7 8
id (91)
    on left: 12, on right: 10 11
giveScalar (92)
    on left: 13 14, on right: 12
type (93)
    on left: 15 16 17 18, on right: 7 41 73 74 99 100 105 106 107 108
type1 (94)
    on left: 19, on right: 15
type2 (95)
    on left: 20 21 22 23 24 25, on right: 16
type3 (96)
    on left: 26 27 28 29 30, on right: 17
type4 (97)
    on left: 31, on right: 18
mayHaveConst (98)
    on left: 32 33, on right: 19 20 21 22 23 24 25 26 27 28 29 30
mayHaveSign (99)
    on left: 34 35 36, on right: 19 20 21 22 23 24 25
mayLongOrShort (100)
    on left: 37 38 39 40, on right: 19
arrayDeclare (101)
    on left: 41, on right: 3 114
array (102)
    on left: 42, on right: 41 43
arrayList (103)
    on left: 43 44, on right: 41 43
lrSquareBracketList (104)
    on left: 45 46, on right: 42 45 98
giveArray (105)
    on left: 47 48, on right: 42
arrayContent (106)
    on left: 49 50, on right: 47 54
itemList (107)
    on left: 51 52, on right: 49 51
item (108)
    on left: 53 54, on right: 49 51
expr (109)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
    73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93,
    on right: 13 42 45 53 61 62 63 64 65 66 67 68 69 70 71 72 73 74
    75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 96
    115 122 127 129 130 131 134 138
contiExpr (110)
    on left: 94 95, on right: 64
exprList (111)
    on left: 96 97, on right: 94 96
identOrArray (112)
    on left: 98, on right: 55
functionDeclare (113)
    on left: 99 100, on right: 4
parameters (114)
    on left: 101 102, on right: 99 100 107 108
parameterList (115)
    on left: 103 104, on right: 101 103
parameter (116)
    on left: 105 106, on right: 101 103
functionDefinition (117)
    on left: 107 108, on right: 5
compoundStmt (118)
    on left: 109, on right: 107 108 121 138 139
stmtOrVarDeclares (119)
    on left: 110 111, on right: 109 110
stmtOrVarDeclare (120)
    on left: 112 113 114, on right: 110
stmt (121)
    on left: 115 116 117 118 119 120 121, on right: 112 126 129 130
    136
returnBreakContinueStmt (122)
    on left: 122 123 124 125, on right: 120
forStmt (123)
    on left: 126, on right: 119
mayHaveExpr (124)
    on left: 127 128, on right: 126
whileStmt (125)
    on left: 129 130, on right: 118
switchStmt (126)
    on left: 131, on right: 117
switchCluses (127)
    on left: 132 133, on right: 131 132
switchClue (128)
    on left: 134 135, on right: 132
stmts (129)
    on left: 136 137, on right: 134 135 136
ifOrIfElseStmt (130)
    on left: 138, on right: 116
mayHaveElse (131)
    on left: 139 140, on right: 138


State 0

    0 $accept: . startHere $end

    CONSTTYPE  shift, and go to state 1

    $end      reduce using rule 6 (top)
    $default  reduce using rule 33 (mayHaveConst)

    startHere           go to state 2
    top                 go to state 3
    scalarDeclare       go to state 4
    type                go to state 5
    type1               go to state 6
    type2               go to state 7
    type3               go to state 8
    type4               go to state 9
    mayHaveConst        go to state 10
    arrayDeclare        go to state 11
    functionDeclare     go to state 12
    functionDefinition  go to state 13


State 1

   31 type4: CONSTTYPE .
   32 mayHaveConst: CONSTTYPE .

    IDENT         reduce using rule 31 (type4)
    MULSTAR       reduce using rule 31 (type4)
    RPARENTHESIS  reduce using rule 31 (type4)
    $default      reduce using rule 32 (mayHaveConst)


State 2

    0 $accept: startHere . $end

    $end  shift, and go to state 14


State 3

    1 startHere: top .

    $default  reduce using rule 1 (startHere)


State 4

    2 top: scalarDeclare . top

    CONSTTYPE  shift, and go to state 1

    $end      reduce using rule 6 (top)
    $default  reduce using rule 33 (mayHaveConst)

    top                 go to state 15
    scalarDeclare       go to state 4
    type                go to state 5
    type1               go to state 6
    type2               go to state 7
    type3               go to state 8
    type4               go to state 9
    mayHaveConst        go to state 10
    arrayDeclare        go to state 11
    functionDeclare     go to state 12
    functionDefinition  go to state 13


State 5

    7 scalarDeclare: type . ident identList EOL
   41 arrayDeclare: type . array arrayList EOL
   99 functionDeclare: type . IDENT LPARENTHESIS parameters RPARENTHESIS EOL
  100                | type . MULSTAR IDENT LPARENTHESIS parameters RPARENTHESIS EOL
  107 functionDefinition: type . IDENT LPARENTHESIS parameters RPARENTHESIS compoundStmt
  108                   | type . MULSTAR IDENT LPARENTHESIS parameters RPARENTHESIS compoundStmt

    IDENT    shift, and go to state 16
    MULSTAR  shift, and go to state 17

    ident  go to state 18
    id     go to state 19
    array  go to state 20


State 6

   15 type: type1 .

    $default  reduce using rule 15 (type)


State 7

   16 type: type2 .

    $default  reduce using rule 16 (type)


State 8

   17 type: type3 .

    $default  reduce using rule 17 (type)


State 9

   18 type: type4 .

    $default  reduce using rule 18 (type)


State 10

   19 type1: mayHaveConst . mayHaveSign mayLongOrShort INTTYPE
   20 type2: mayHaveConst . mayHaveSign LONGLONGTYPE
   21      | mayHaveConst . mayHaveSign LONGTYPE
   22      | mayHaveConst . mayHaveSign SHORTTYPE
   23      | mayHaveConst . mayHaveSign CHARTYPE
   24      | mayHaveConst . mayHaveSign CHAR4TYPE
   25      | mayHaveConst . mayHaveSign CHAR8TYPE
   26 type3: mayHaveConst . SIGNEDTYPE
   27      | mayHaveConst . UNSIGNEDTYPE
   28      | mayHaveConst . FLOATTYPE
   29      | mayHaveConst . DOUBLETYPE
   30      | mayHaveConst . VOIDTYPE

    DOUBLETYPE    shift, and go to state 21
    FLOATTYPE     shift, and go to state 22
    SIGNEDTYPE    shift, and go to state 23
    UNSIGNEDTYPE  shift, and go to state 24
    VOIDTYPE      shift, and go to state 25

    $default  reduce using rule 36 (mayHaveSign)

    mayHaveSign  go to state 26


State 11

    3 top: arrayDeclare . top

    CONSTTYPE  shift, and go to state 1

    $end      reduce using rule 6 (top)
    $default  reduce using rule 33 (mayHaveConst)

    top                 go to state 27
    scalarDeclare       go to state 4
    type                go to state 5
    type1               go to state 6
    type2               go to state 7
    type3               go to state 8
    type4               go to state 9
    mayHaveConst        go to state 10
    arrayDeclare        go to state 11
    functionDeclare     go to state 12
    functionDefinition  go to state 13


State 12

    4 top: functionDeclare . top

    CONSTTYPE  shift, and go to state 1

    $end      reduce using rule 6 (top)
    $default  reduce using rule 33 (mayHaveConst)

    top                 go to state 28
    scalarDeclare       go to state 4
    type                go to state 5
    type1               go to state 6
    type2               go to state 7
    type3               go to state 8
    type4               go to state 9
    mayHaveConst        go to state 10
    arrayDeclare        go to state 11
    functionDeclare     go to state 12
    functionDefinition  go to state 13


State 13

    5 top: functionDefinition . top

    CONSTTYPE  shift, and go to state 1

    $end      reduce using rule 6 (top)
    $default  reduce using rule 33 (mayHaveConst)

    top                 go to state 29
    scalarDeclare       go to state 4
    type                go to state 5
    type1               go to state 6
    type2               go to state 7
    type3               go to state 8
    type4               go to state 9
    mayHaveConst        go to state 10
    arrayDeclare        go to state 11
    functionDeclare     go to state 12
    functionDefinition  go to state 13


State 14

    0 $accept: startHere $end .

    $default  accept


State 15

    2 top: scalarDeclare top .

    $default  reduce using rule 2 (top)


State 16

   12 id: IDENT . giveScalar
   42 array: IDENT . LSQUAREBRACKET expr RSQUAREBRACKET lrSquareBracketList giveArray
   99 functionDeclare: type IDENT . LPARENTHESIS parameters RPARENTHESIS EOL
  107 functionDefinition: type IDENT . LPARENTHESIS parameters RPARENTHESIS compoundStmt

    ASSIGN          shift, and go to state 30
    LSQUAREBRACKET  shift, and go to state 31
    LPARENTHESIS    shift, and go to state 32

    $default  reduce using rule 14 (giveScalar)

    giveScalar  go to state 33


State 17

   10 ident: MULSTAR . id
  100 functionDeclare: type MULSTAR . IDENT LPARENTHESIS parameters RPARENTHESIS EOL
  108 functionDefinition: type MULSTAR . IDENT LPARENTHESIS parameters RPARENTHESIS compoundStmt

    IDENT  shift, and go to state 34

    id  go to state 35


State 18

    7 scalarDeclare: type ident . identList EOL

    COMMA  shift, and go to state 36

    $default  reduce using rule 9 (identList)

    identList  go to state 37


State 19

   11 ident: id .

    $default  reduce using rule 11 (ident)


State 20

   41 arrayDeclare: type array . arrayList EOL

    COMMA  shift, and go to state 38

    $default  reduce using rule 44 (arrayList)

    arrayList  go to state 39


State 21

   29 type3: mayHaveConst DOUBLETYPE .

    $default  reduce using rule 29 (type3)


State 22

   28 type3: mayHaveConst FLOATTYPE .

    $default  reduce using rule 28 (type3)


State 23

   26 type3: mayHaveConst SIGNEDTYPE .
   34 mayHaveSign: SIGNEDTYPE .

    IDENT         reduce using rule 26 (type3)
    MULSTAR       reduce using rule 26 (type3)
    RPARENTHESIS  reduce using rule 26 (type3)
    $default      reduce using rule 34 (mayHaveSign)


State 24

   27 type3: mayHaveConst UNSIGNEDTYPE .
   35 mayHaveSign: UNSIGNEDTYPE .

    IDENT         reduce using rule 27 (type3)
    MULSTAR       reduce using rule 27 (type3)
    RPARENTHESIS  reduce using rule 27 (type3)
    $default      reduce using rule 35 (mayHaveSign)


State 25

   30 type3: mayHaveConst VOIDTYPE .

    $default  reduce using rule 30 (type3)


State 26

   19 type1: mayHaveConst mayHaveSign . mayLongOrShort INTTYPE
   20 type2: mayHaveConst mayHaveSign . LONGLONGTYPE
   21      | mayHaveConst mayHaveSign . LONGTYPE
   22      | mayHaveConst mayHaveSign . SHORTTYPE
   23      | mayHaveConst mayHaveSign . CHARTYPE
   24      | mayHaveConst mayHaveSign . CHAR4TYPE
   25      | mayHaveConst mayHaveSign . CHAR8TYPE

    CHARTYPE      shift, and go to state 40
    LONGLONGTYPE  shift, and go to state 41
    LONGTYPE      shift, and go to state 42
    SHORTTYPE     shift, and go to state 43
    CHAR4TYPE     shift, and go to state 44
    CHAR8TYPE     shift, and go to state 45

    $default  reduce using rule 40 (mayLongOrShort)

    mayLongOrShort  go to state 46


State 27

    3 top: arrayDeclare top .

    $default  reduce using rule 3 (top)


State 28

    4 top: functionDeclare top .

    $default  reduce using rule 4 (top)


State 29

    5 top: functionDefinition top .

    $default  reduce using rule 5 (top)


State 30

   13 giveScalar: ASSIGN . expr

    INT           shift, and go to state 47
    MYCHAR        shift, and go to state 48
    MYSTRING      shift, and go to state 49
    MYNULL        shift, and go to state 50
    DOUBLE        shift, and go to state 51
    IDENT         shift, and go to state 52
    ADD           shift, and go to state 53
    MINUS         shift, and go to state 54
    TILDA         shift, and go to state 55
    EXCLAMATION   shift, and go to state 56
    BITWISEAND    shift, and go to state 57
    MULSTAR       shift, and go to state 58
    ADDONE        shift, and go to state 59
    MINUSONE      shift, and go to state 60
    LPARENTHESIS  shift, and go to state 61

    expr          go to state 62
    identOrArray  go to state 63


State 31

   42 array: IDENT LSQUAREBRACKET . expr RSQUAREBRACKET lrSquareBracketList giveArray

    INT           shift, and go to state 47
    MYCHAR        shift, and go to state 48
    MYSTRING      shift, and go to state 49
    MYNULL        shift, and go to state 50
    DOUBLE        shift, and go to state 51
    IDENT         shift, and go to state 52
    ADD           shift, and go to state 53
    MINUS         shift, and go to state 54
    TILDA         shift, and go to state 55
    EXCLAMATION   shift, and go to state 56
    BITWISEAND    shift, and go to state 57
    MULSTAR       shift, and go to state 58
    ADDONE        shift, and go to state 59
    MINUSONE      shift, and go to state 60
    LPARENTHESIS  shift, and go to state 61

    expr          go to state 64
    identOrArray  go to state 63


State 32

   99 functionDeclare: type IDENT LPARENTHESIS . parameters RPARENTHESIS EOL
  107 functionDefinition: type IDENT LPARENTHESIS . parameters RPARENTHESIS compoundStmt

    CONSTTYPE  shift, and go to state 1

    RPARENTHESIS  reduce using rule 102 (parameters)
    $default      reduce using rule 33 (mayHaveConst)

    type          go to state 65
    type1         go to state 6
    type2         go to state 7
    type3         go to state 8
    type4         go to state 9
    mayHaveConst  go to state 10
    parameters    go to state 66
    parameter     go to state 67


State 33

   12 id: IDENT giveScalar .

    $default  reduce using rule 12 (id)


State 34

   12 id: IDENT . giveScalar
  100 functionDeclare: type MULSTAR IDENT . LPARENTHESIS parameters RPARENTHESIS EOL
  108 functionDefinition: type MULSTAR IDENT . LPARENTHESIS parameters RPARENTHESIS compoundStmt

    ASSIGN        shift, and go to state 30
    LPARENTHESIS  shift, and go to state 68

    $default  reduce using rule 14 (giveScalar)

    giveScalar  go to state 33


State 35

   10 ident: MULSTAR id .

    $default  reduce using rule 10 (ident)


State 36

    8 identList: COMMA . ident identList

    IDENT    shift, and go to state 69
    MULSTAR  shift, and go to state 70

    ident  go to state 71
    id     go to state 19


State 37

    7 scalarDeclare: type ident identList . EOL

    EOL  shift, and go to state 72


State 38

   43 arrayList: COMMA . array arrayList

    IDENT  shift, and go to state 73

    array  go to state 74


State 39

   41 arrayDeclare: type array arrayList . EOL

    EOL  shift, and go to state 75


State 40

   23 type2: mayHaveConst mayHaveSign CHARTYPE .

    $default  reduce using rule 23 (type2)


State 41

   20 type2: mayHaveConst mayHaveSign LONGLONGTYPE .
   37 mayLongOrShort: LONGLONGTYPE .

    INTTYPE   reduce using rule 37 (mayLongOrShort)
    $default  reduce using rule 20 (type2)


State 42

   21 type2: mayHaveConst mayHaveSign LONGTYPE .
   38 mayLongOrShort: LONGTYPE .

    INTTYPE   reduce using rule 38 (mayLongOrShort)
    $default  reduce using rule 21 (type2)


State 43

   22 type2: mayHaveConst mayHaveSign SHORTTYPE .
   39 mayLongOrShort: SHORTTYPE .

    INTTYPE   reduce using rule 39 (mayLongOrShort)
    $default  reduce using rule 22 (type2)


State 44

   24 type2: mayHaveConst mayHaveSign CHAR4TYPE .

    $default  reduce using rule 24 (type2)


State 45

   25 type2: mayHaveConst mayHaveSign CHAR8TYPE .

    $default  reduce using rule 25 (type2)


State 46

   19 type1: mayHaveConst mayHaveSign mayLongOrShort . INTTYPE

    INTTYPE  shift, and go to state 76


State 47

   56 expr: INT .

    $default  reduce using rule 56 (expr)


State 48

   58 expr: MYCHAR .

    $default  reduce using rule 58 (expr)


State 49

   59 expr: MYSTRING .

    $default  reduce using rule 59 (expr)


State 50

   60 expr: MYNULL .

    $default  reduce using rule 60 (expr)


State 51

   57 expr: DOUBLE .

    $default  reduce using rule 57 (expr)


State 52

   98 identOrArray: IDENT . lrSquareBracketList

    LSQUAREBRACKET  shift, and go to state 77

    $default  reduce using rule 46 (lrSquareBracketList)

    lrSquareBracketList  go to state 78


State 53

   69 expr: ADD . expr

    INT           shift, and go to state 47
    MYCHAR        shift, and go to state 48
    MYSTRING      shift, and go to state 49
    MYNULL        shift, and go to state 50
    DOUBLE        shift, and go to state 51
    IDENT         shift, and go to state 52
    ADD           shift, and go to state 53
    MINUS         shift, and go to state 54
    TILDA         shift, and go to state 55
    EXCLAMATION   shift, and go to state 56
    BITWISEAND    shift, and go to state 57
    MULSTAR       shift, and go to state 58
    ADDONE        shift, and go to state 59
    MINUSONE      shift, and go to state 60
    LPARENTHESIS  shift, and go to state 61

    expr          go to state 79
    identOrArray  go to state 63


State 54

   70 expr: MINUS . expr

    INT           shift, and go to state 47
    MYCHAR        shift, and go to state 48
    MYSTRING      shift, and go to state 49
    MYNULL        shift, and go to state 50
    DOUBLE        shift, and go to state 51
    IDENT         shift, and go to state 52
    ADD           shift, and go to state 53
    MINUS         shift, and go to state 54
    TILDA         shift, and go to state 55
    EXCLAMATION   shift, and go to state 56
    BITWISEAND    shift, and go to state 57
    MULSTAR       shift, and go to state 58
    ADDONE        shift, and go to state 59
    MINUSONE      shift, and go to state 60
    LPARENTHESIS  shift, and go to state 61

    expr          go to state 80
    identOrArray  go to state 63


State 55

   67 expr: TILDA . expr

    INT           shift, and go to state 47
    MYCHAR        shift, and go to state 48
    MYSTRING      shift, and go to state 49
    MYNULL        shift, and go to state 50
    DOUBLE        shift, and go to state 51
    IDENT         shift, and go to state 52
    ADD           shift, and go to state 53
    MINUS         shift, and go to state 54
    TILDA         shift, and go to state 55
    EXCLAMATION   shift, and go to state 56
    BITWISEAND    shift, and go to state 57
    MULSTAR       shift, and go to state 58
    ADDONE        shift, and go to state 59
    MINUSONE      shift, and go to state 60
    LPARENTHESIS  shift, and go to state 61

    expr          go to state 81
    identOrArray  go to state 63


State 56

   68 expr: EXCLAMATION . expr

    INT           shift, and go to state 47
    MYCHAR        shift, and go to state 48
    MYSTRING      shift, and go to state 49
    MYNULL        shift, and go to state 50
    DOUBLE        shift, and go to state 51
    IDENT         shift, and go to state 52
    ADD           shift, and go to state 53
    MINUS         shift, and go to state 54
    TILDA         shift, and go to state 55
    EXCLAMATION   shift, and go to state 56
    BITWISEAND    shift, and go to state 57
    MULSTAR       shift, and go to state 58
    ADDONE        shift, and go to state 59
    MINUSONE      shift, and go to state 60
    LPARENTHESIS  shift, and go to state 61

    expr          go to state 82
    identOrArray  go to state 63


State 57

   65 expr: BITWISEAND . expr

    INT           shift, and go to state 47
    MYCHAR        shift, and go to state 48
    MYSTRING      shift, and go to state 49
    MYNULL        shift, and go to state 50
    DOUBLE        shift, and go to state 51
    IDENT         shift, and go to state 52
    ADD           shift, and go to state 53
    MINUS         shift, and go to state 54
    TILDA         shift, and go to state 55
    EXCLAMATION   shift, and go to state 56
    BITWISEAND    shift, and go to state 57
    MULSTAR       shift, and go to state 58
    ADDONE        shift, and go to state 59
    MINUSONE      shift, and go to state 60
    LPARENTHESIS  shift, and go to state 61

    expr          go to state 83
    identOrArray  go to state 63


State 58

   66 expr: MULSTAR . expr

    INT           shift, and go to state 47
    MYCHAR        shift, and go to state 48
    MYSTRING      shift, and go to state 49
    MYNULL        shift, and go to state 50
    DOUBLE        shift, and go to state 51
    IDENT         shift, and go to state 52
    ADD           shift, and go to state 53
    MINUS         shift, and go to state 54
    TILDA         shift, and go to state 55
    EXCLAMATION   shift, and go to state 56
    BITWISEAND    shift, and go to state 57
    MULSTAR       shift, and go to state 58
    ADDONE        shift, and go to state 59
    MINUSONE      shift, and go to state 60
    LPARENTHESIS  shift, and go to state 61

    expr          go to state 84
    identOrArray  go to state 63


State 59

   71 expr: ADDONE . expr

    INT           shift, and go to state 47
    MYCHAR        shift, and go to state 48
    MYSTRING      shift, and go to state 49
    MYNULL        shift, and go to state 50
    DOUBLE        shift, and go to state 51
    IDENT         shift, and go to state 52
    ADD           shift, and go to state 53
    MINUS         shift, and go to state 54
    TILDA         shift, and go to state 55
    EXCLAMATION   shift, and go to state 56
    BITWISEAND    shift, and go to state 57
    MULSTAR       shift, and go to state 58
    ADDONE        shift, and go to state 59
    MINUSONE      shift, and go to state 60
    LPARENTHESIS  shift, and go to state 61

    expr          go to state 85
    identOrArray  go to state 63


State 60

   72 expr: MINUSONE . expr

    INT           shift, and go to state 47
    MYCHAR        shift, and go to state 48
    MYSTRING      shift, and go to state 49
    MYNULL        shift, and go to state 50
    DOUBLE        shift, and go to state 51
    IDENT         shift, and go to state 52
    ADD           shift, and go to state 53
    MINUS         shift, and go to state 54
    TILDA         shift, and go to state 55
    EXCLAMATION   shift, and go to state 56
    BITWISEAND    shift, and go to state 57
    MULSTAR       shift, and go to state 58
    ADDONE        shift, and go to state 59
    MINUSONE      shift, and go to state 60
    LPARENTHESIS  shift, and go to state 61

    expr          go to state 86
    identOrArray  go to state 63


State 61

   61 expr: LPARENTHESIS . expr RPARENTHESIS
   73     | LPARENTHESIS . type MULSTAR RPARENTHESIS expr
   74     | LPARENTHESIS . type RPARENTHESIS expr

    INT           shift, and go to state 47
    MYCHAR        shift, and go to state 48
    MYSTRING      shift, and go to state 49
    MYNULL        shift, and go to state 50
    DOUBLE        shift, and go to state 51
    CONSTTYPE     shift, and go to state 1
    IDENT         shift, and go to state 52
    ADD           shift, and go to state 53
    MINUS         shift, and go to state 54
    TILDA         shift, and go to state 55
    EXCLAMATION   shift, and go to state 56
    BITWISEAND    shift, and go to state 57
    MULSTAR       shift, and go to state 58
    ADDONE        shift, and go to state 59
    MINUSONE      shift, and go to state 60
    LPARENTHESIS  shift, and go to state 61

    $default  reduce using rule 33 (mayHaveConst)

    type          go to state 87
    type1         go to state 6
    type2         go to state 7
    type3         go to state 8
    type4         go to state 9
    mayHaveConst  go to state 10
    expr          go to state 88
    identOrArray  go to state 63


State 62

   13 giveScalar: ASSIGN expr .
   62 expr: expr . ADDONE
   63     | expr . MINUSONE
   64     | expr . LPARENTHESIS contiExpr RPARENTHESIS
   75     | expr . MULSTAR expr
   76     | expr . SLASH expr
   77     | expr . MOD expr
   78     | expr . ADD expr
   79     | expr . MINUS expr
   80     | expr . SHIFTLEFT expr
   81     | expr . SHIFTRIGHT expr
   82     | expr . BIG expr
   83     | expr . BIGOREQ expr
   84     | expr . SMALL expr
   85     | expr . SMALLOREQ expr
   86     | expr . EQ expr
   87     | expr . NOTEQ expr
   88     | expr . BITWISEAND expr
   89     | expr . XOR expr
   90     | expr . BITWISEOR expr
   91     | expr . LOGICALAND expr
   92     | expr . LOGICALOR expr
   93     | expr . ASSIGN expr

    ASSIGN        shift, and go to state 89
    LOGICALOR     shift, and go to state 90
    LOGICALAND    shift, and go to state 91
    BITWISEOR     shift, and go to state 92
    XOR           shift, and go to state 93
    EQ            shift, and go to state 94
    NOTEQ         shift, and go to state 95
    BIGOREQ       shift, and go to state 96
    SMALLOREQ     shift, and go to state 97
    BIG           shift, and go to state 98
    SMALL         shift, and go to state 99
    SHIFTLEFT     shift, and go to state 100
    SHIFTRIGHT    shift, and go to state 101
    SLASH         shift, and go to state 102
    MOD           shift, and go to state 103
    ADD           shift, and go to state 104
    MINUS         shift, and go to state 105
    BITWISEAND    shift, and go to state 106
    MULSTAR       shift, and go to state 107
    ADDONE        shift, and go to state 108
    MINUSONE      shift, and go to state 109
    LPARENTHESIS  shift, and go to state 110

    $default  reduce using rule 13 (giveScalar)


State 63
